--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -12,15 +12,14 @@
     android:clickable="false">
 
     <ImageView
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/deliverIcon"
-        android:scaleType="fitCenter"
+        android:scaleType="fitXY"
         android:adjustViewBounds="true"
         android:src="@drawable/road"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:contentDescription="road"
+         />
 
 
     <EditText
@@ -82,8 +81,9 @@
         android:background="@color/white"
         android:textSize="15dp"
         android:textAllCaps="false"
-        android:layout_alignRight="@+id/passwordField"
-        android:layout_alignEnd="@+id/passwordField" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:minHeight="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -94,9 +94,10 @@
         android:textColor="@color/white"
         android:clickable="true"
         android:onClick="createAccount"
-        android:layout_alignParentBottom="true"
+        android:textSize="20dp"
+        android:layout_below="@+id/facebookLogin"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="93dp" />
+        android:layout_marginTop="37dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -107,17 +108,18 @@
         android:textColor="@color/white"
         android:layout_below="@+id/loginButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
+        android:textSize="15dp"
+        android:layout_marginTop="15dp" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/facebookLogin"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_above="@+id/createAccount"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="40dp" />
+        android:layout_below="@+id/or"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="20dp" />
 
 
 </RelativeLayout>
