--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,6 +9,13 @@
         android:title="newlocation"
         android:id="@+id/newlocation"
         android:icon="@mipmap/newlocation"
+        android:orderInCategory="2"
+        android:visible="true"
+        app:showAsAction="always"/>
+    <item
+        android:title="specialRequest"
+        android:id="@+id/specialRequest"
+        android:icon="@mipmap/specialrequest"
         android:orderInCategory="1"
         android:visible="true"
         app:showAsAction="always"/>
