--- a/app/src/main/res/layout/specialrequest.xml
+++ b/app/src/main/res/layout/specialrequest.xml
@@ -5,21 +5,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textPlace"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
-            android:minHeight="100dp"
-            android:textSize="30dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/white" />
+        android:layout_height="match_parent">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -27,6 +13,55 @@
             android:id="@+id/roadImage"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/splashpic" />
+            android:background="@drawable/longroad" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textPlace"
+            android:minHeight="100dp"
+            android:textSize="30dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_below="@+id/selectedPlace"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Selected Place:"
+            android:id="@+id/selectedPlace"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:minHeight="100dp"
+            android:gravity="center"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/requestTextView"
+            android:hint="Enter Special Request Item(s)"
+            android:minHeight="100dp"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@color/gray" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit Request"
+            android:id="@+id/submitRequest"
+            android:layout_below="@+id/requestTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="68dp"
+            android:onClick="requestSubmit" />
     </RelativeLayout>
 </LinearLayout>
