--- a/app/src/main/res/layout/specialrequest.xml
+++ b/app/src/main/res/layout/specialrequest.xml
@@ -1,67 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/longroad"
+    android:id="@+id/layout">
 
-    <RelativeLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/specToolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:elevation="2dp"
+        android:background="@color/black" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/roadImage"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/longroad" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/textPlace"
+        android:layout_gravity="center_horizontal"
+        android:minHeight="60dp"
+        android:gravity="center"
+        android:textSize="30dp"
+        android:textStyle="bold|italic" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textPlace"
-            android:minHeight="100dp"
-            android:textSize="30dp"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:layout_below="@+id/selectedPlace"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Selected Place:"
-            android:id="@+id/selectedPlace"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:minHeight="100dp"
-            android:gravity="center"
-            android:textSize="30dp"
-            android:textStyle="bold" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:minHeight="100dp">
 
         <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/requestTextView"
-            android:hint="Enter Special Request Item(s)"
-            android:minHeight="100dp"
-            android:gravity="center"
-            android:textSize="20dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:background="@color/gray" />
-
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Submit Request"
-            android:id="@+id/submitRequest"
-            android:layout_below="@+id/requestTextView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="68dp"
+            android:id="@+id/requestTextView"
+            android:background="@color/gray"
+            android:minWidth="200dp"
+            android:minHeight="100dp"
+            android:hint="Enter Item(s)"
+            android:maxWidth="200dp" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/requestAmountView"
+            android:background="@color/black"
+            android:minWidth="70dp"
+            android:minHeight="100dp"
+            android:hint="$"
+            android:maxWidth="70dp"
+            android:inputType="number" />
+
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:id="@+id/submitButton"
+            android:minWidth="110dp"
             android:onClick="requestSubmit" />
-    </RelativeLayout>
+
+    </LinearLayout>
+
+    <WebView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/placeWebView"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="1"
+        android:visibility="invisible" />
+
 </LinearLayout>
